# order-book-aggregator

./: .gitignore  Cargo.toml  README.md
crates/api/: Cargo.toml  build.rs
crates/api/src/: lib.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  main.rs
crates/markets/: Cargo.toml
crates/markets/src/: asset.rs  exchange.rs  lib.rs  market.rs  order_book.rs
crates/server/: Cargo.toml
crates/server/src/: grpc.rs  main.rs
