[package]
name = "markets"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }

api = { path = "../api" }

futures-util = "0.3.26"
serde_json = "1.0.93"
serde = { version = "1.0", features = ["derive"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
tungstenite = "0.18.0"
url = "2.3"