[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
tonic.workspace = true

api = { path = "../api" }
markets = { path = "../markets" }

async-trait = "0.1.57"
futures-util = "0.3.26"
prost-types = "0.11.6"
tokio-stream = "0.1.11"